--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -28,6 +28,8 @@
                 href="/project">PA04</a></li>
             <li class="<%= path === '/pa08' ? 'active' : ''%>"><a class="dropdown-item"
                   href="/proveAssignments/pa08">PA08</a></li>
+            <li class="<%= path === '/pa09' ? 'active' : ''%>"><a class="dropdown-item"
+                  href="/proveAssignments/pa09">PA09</a></li>
           </ul>
         </li>
         <li class="nav-item">
