--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -30,6 +30,8 @@
                   href="/proveAssignments/pa08">PA08</a></li>
             <li class="<%= path === '/pa09' ? 'active' : ''%>"><a class="dropdown-item"
                   href="/proveAssignments/pa09">PA09</a></li>
+            <li class="<%= path === '/pa10' ? 'active' : ''%>"><a class="dropdown-item"
+              href="/proveAssignments/pa10">PA10</a></li>
           </ul>
         </li>
         <li class="nav-item">
