--- a/views/pages/pa10.ejs
+++ b/views/pages/pa10.ejs
@@ -30,6 +30,7 @@
             </div>
         </div>
 </body>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/scripts/pa10.js"></script>
 
 </html>
