--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -124,3 +124,26 @@ button.nav-link {
   background-color: #011627;
   border-color: #011627;
 }
+
+#chatBox{
+  border: 1px solid black;
+  border-radius: .25rem;
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  height: 300px;
+}
+.message{
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 8px;
+  max-width: 60%;
+  align-self: flex-start;
+  margin-bottom: 5px;
+}
+.uMessage{
+  background-color: lightgreen;
+  align-self: flex-end;
+}
