--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -19,19 +19,21 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li class="<%= path === '/pa01' ? 'active' : ''%>"><a class="dropdown-item"
-                href="/proveAssignments/pa01">PA01</a></li>
+              href="/proveAssignments/pa01">PA01</a></li>
             <li class="<%= path === '/pa02' ? 'active' : ''%>"><a class="dropdown-item"
-                href="/proveAssignments/pa02">PA02</a></li>
+              href="/proveAssignments/pa02">PA02</a></li>
             <li class="<%= path === '/pa03' ? 'active' : ''%>"><a class="dropdown-item"
-                href="/project">PA03</a></li>
+              href="/project">PA03</a></li>
             <li class="<%= path === '/pa04' ? 'active' : ''%>"><a class="dropdown-item"
-                href="/project">PA04</a></li>
+              href="/project">PA04</a></li>
             <li class="<%= path === '/pa08' ? 'active' : ''%>"><a class="dropdown-item"
-                  href="/proveAssignments/pa08">PA08</a></li>
+              href="/proveAssignments/pa08">PA08</a></li>
             <li class="<%= path === '/pa09' ? 'active' : ''%>"><a class="dropdown-item"
-                  href="/proveAssignments/pa09">PA09</a></li>
+              href="/proveAssignments/pa09">PA09</a></li>
             <li class="<%= path === '/pa10' ? 'active' : ''%>"><a class="dropdown-item"
               href="/proveAssignments/pa10">PA10</a></li>
+            <li class="<%= path === '/pa12' ? 'active' : ''%>"><a class="dropdown-item"
+              href="/proveAssignments/pa12">PA12</a></li>
           </ul>
         </li>
         <li class="nav-item">
